# Voxel_Bot

./: .gitignore  CMakeLists.txt  CMakeLists.txt.save  cheeatSheet.ini
raylib/src/: rlgl.h
src/: main.cpp
src/shaders/: TestingComputeShader.comp  raymarcher.fs  testshader.fs
